---- Changes since 1.200 ----
Added a new icon for re-configuring where Procmail delivers mail classifies as Spam.
---- Changes since 1.210 ----
Simplified the Header and Body Tests page, to more easily allow the definition of rules using the header, score and describe directives.
---- Changes since 1.250 ----
Updated the setup and procmail delivery pages to allow forwarding of spam to an email address.
---- Changes since 1.270 ----
Added a Module Config option for specifying a command other than spamassassin (such as spamc) to use in the procmailrc file. This defaults to an automatic mode, where spamc is used if spamd is running.
---- Changes since 1.300 ----
Added Module Config options for commands to run before and after saving SpamAssassin config changes.
---- Changes since 1.360 ----
Added the SQL and LDAP Databases page for configuring SpamAssassin to use a MySQL, PostgreSQL or LDAP database for user preferences.
Added global configuration settings to use MySQL, PostgreSQL or LDAP backends for storing preferences.
---- Changes since 1.410 ----
Auto-whitelists can now be viewed, deleted from and cleared for all users on the system. An access control option allows this to be limited to just certain users or group members.
---- Changes since 1.430 ----
Added buttons to the auto-whitelist page for permanently allowing or denying selected addresses.
---- Changes since 1.440 ----
Corrected the columns on the auto-whitelist page, to show the message count and score.